--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,74 @@ a
 
 }
 
+/* Header */ 
 .header
 {
     grid-area: header;
+    background: linear-gradient(135deg, #8844ee, #B07DFB);
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
 }
 
+.logo 
+{
+    max-width: 200px;
+}
+
+.header nav ul 
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.header nav a
+{
+    display: block;
+    padding: 10px;
+    color: white;
+    font-size: 1.125em;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    transition: 0.1s;
+}
+
+.header nav a:hover{
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.header li + li 
+{
+    margin-left: 30px;
+}
+
+/*Sidenav */ 
 .sidenav 
 {
-    grid-area: sidenav
+   grid-area: sidenav;
+   background-color: #fafbfc;
+   padding: 30px;
 }
+
+.sidenav li a 
+{
+    display: block;
+    min-width: 60px;
+    max-width: 100px;
+    margin: 0 auto 30px auto;
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0 rgba(44, 44, 44, 0.15);
+    transition: .1s ease-out;
+}
+
+.sidenav li a:hover
+{
+    background-color: ;
+}
+
 
 .content
 {
