--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,13 @@ a
 {
     text-decoration: none;
 }
+img
+{
+    display: block;
+    max-width: 100%;
+    border-radius: 5px;
+}
+
 
 /* Grid Geral */ 
 
@@ -97,17 +104,210 @@ a
 
 .sidenav li a:hover
 {
-    background-color: ;
+    background-color: linear-gradient(135deg, #8844ee, #B07DFB);
 }
 
-
+/* Conteúdo */ 
 .content
 {
     grid-area: content;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
 }
 
+.col-wide 
+{
+    grid-column: 1/-1;
+}
+
+/*Estilos conteúdo */
+
+p 
+{
+    font-size: 1.2em;
+    line-height: 1.6;
+    letter-spacing: -0.005em;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.informacoes p + p 
+{
+    margin-top: 30px;
+}
+
+/*Título */
+.titulo
+{
+    color: #b07df8;
+}
+
+.titulo h1
+{
+    font-size: 3.75em;
+    line-height: 1;
+    font-weight: 700;
+}
+
+.titulo h1 span
+{
+   font-size: 0.875em;
+   font-style: italic; 
+}
+
+/* Caracteristicas */
+.caracteristicas 
+{
+    display: flex;
+    align-items: flex-start;
+
+}
+
+.caracteristicas > div 
+{
+    width: 80px;
+    text-align: center;
+    background: linear-gradient(135deg, #8844ee, #B07DFB);
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+    position: relative;
+}
+
+.caracteristicas > div:first-child 
+{
+    margin-right: 30px;
+}
+
+.caracteristicas span 
+{
+    display: block;
+    color: #B07DFB;
+}
+
+.numero
+{
+    color: #B07DFB;
+    font-size: 3em;
+    line-height: 1;
+    margin: 10px auto;
+}
+
+.rotulo 
+{
+    background: white;
+    border-radius: 0 0 5px 5px;
+    padding: 5px 0;
+    position: relative;
+    top: 2px;
+}
+
+.destaque
+{
+    font-size: 0.875em;
+    color: #B07DFB;
+    
+}
+
+.citacao, .atributos
+{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+    background: linear-gradient(135deg, #8844ee, #B07DFB); 
+}
+
+.atributos
+{
+    align-self: start;
+}
+/*Anúncios */ 
+.anuncios 
+{
+    grid-area: anuncios;
+    background-color: #fafbfc;
+    display: grid;
+    align-content: start;
+    padding: 30px;
+    grid-gap: 30px;
+}
+
+.citacao p
+{
+ font-size: 1.5em;
+ font-style: italic;
+ text-align: center;
+ max-width: 500px;
+ margin: 0 auto;
+ color: white;
+}
+
+/*Atributos  */
+
+.atributos li
+{
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.125em;
+    padding: 15px;
+}
+
+.atributos li + li 
+{
+    border-top: 2px solid #B07DFB;
+}
+.imagem-1 
+{
+    grid-row: span 2;
+    align-self: end;
+}
+.imagem-2
+{
+    align-self: end;
+}
+/*Footer */
 .footer 
 {
     grid-area: footer;
+    background: linear-gradient(135deg, #8844ee, #B07DFB);
 }
 
+.footer p 
+{
+    color: white;
+    text-align: center;
+    padding: 30px;
+}
+
+
+/* breakpoints */
+
+@media (max-width: 1200px)
+{
+    .estrutura
+    {
+        grid-template-columns: minmax(160px, 1fr);
+        grid-template-areas: 
+        "header header"
+        "sidenav content"
+        "sidenav anuncios"
+        "footer footer"
+        ;
+    }
+}
+
+@media (max-width: 760px)
+{
+    .estrutura
+    {
+        grid-template-columns: 100%;
+        grid-template-areas: 
+        "header"
+        "sidenav"
+        "content"
+        "anuncios"
+        "footer";
+    }
+}
