--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a
 img
 {
     display: block;
-    max-width: 100%;
+    width: 100%;
     border-radius: 5px;
 }
 
@@ -232,6 +232,7 @@ p
     align-content: start;
     padding: 30px;
     grid-gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .citacao p
@@ -368,6 +369,14 @@ p
     }
 
 
+}
+
+@media(max-width:600px)
+{
+    .content 
+    {
+        grid-template-columns: auto;
+    }
 }
 
 /*Keyframes */ 
